tests/bonsai/error/string-literal.bonsai

func foo() -> void {
    // Currently, parsing is not supported for string literals.
    x = "abc";
}
